; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/devutils/symdump/extr_symdump.c_IsUnnamed.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/devutils/symdump/extr_symdump.c_IsUnnamed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [10 x i32] [i32 95, i32 95, i32 117, i32 110, i32 110, i32 97, i32 109, i32 101, i32 100, i32 0], align 4
@.str.1 = private unnamed_addr constant [14 x i32] [i32 60, i32 117, i32 110, i32 110, i32 97, i32 109, i32 101, i32 100, i32 45, i32 116, i32 97, i32 103, i32 62, i32 0], align 4
@TRUE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @IsUnnamed(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %4 = load i32*, i32** %3, align 8
  %5 = call i32* @StrStrW(i32* %4, i8* bitcast ([10 x i32]* @.str to i8*))
  %6 = icmp ne i32* %5, null
  br i1 %6, label %11, label %7

7:                                                ; preds = %1
  %8 = load i32*, i32** %3, align 8
  %9 = call i32* @StrStrW(i32* %8, i8* bitcast ([14 x i32]* @.str.1 to i8*))
  %10 = icmp ne i32* %9, null
  br i1 %10, label %11, label %13

11:                                               ; preds = %7, %1
  %12 = load i32, i32* @TRUE, align 4
  store i32 %12, i32* %2, align 4
  br label %15

13:                                               ; preds = %7
  %14 = load i32, i32* @FALSE, align 4
  store i32 %14, i32* %2, align 4
  br label %15

15:                                               ; preds = %13, %11
  %16 = load i32, i32* %2, align 4
  ret i32 %16
}

declare dso_local i32* @StrStrW(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
